src/objects/Treatment_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Current_Consult_Treatment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Consult Treatment Plan</label>
        <referenceTo>Treatment_Plan__c</referenceTo>
        <relationshipLabel>Treatment Change Requests</relationshipLabel>
        <relationshipName>Treatment_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Initial_Cost__c</fullName>
        <label>Current Initial Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Treatment_Amount__c</fullName>
        <label>Current Treatment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Treatment_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Treatment Option</label>
        <referenceTo>Treatment_Option__c</referenceTo>
        <relationshipLabel>Treatment Change Requests</relationshipLabel>
        <relationshipName>Treatment_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Consult_Treatment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Consult Treatment Plan</label>
        <referenceTo>Treatment_Plan__c</referenceTo>
        <relationshipLabel>Treatment Change Requests (New Consult Treatment Plan)</relationshipLabel>
        <relationshipName>Treatment_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Initial_Cost__c</fullName>
        <label>New Initial Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Treatment_Amount__c</fullName>
        <label>New Treatment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Treatment_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Treatment Option</label>
        <referenceTo>Treatment_Option__c</referenceTo>
        <relationshipLabel>Treatment Change Requests (New Treatment Option)</relationshipLabel>
        <relationshipName>Treatment_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Treatment_Plan__c</fullName>
        <label>Parent Treatment Plan</label>
        <referenceTo>Treatment_Plan__c</referenceTo>
        <relationshipLabel>Treatment Change Requests (Parent Treatment Plan)</relationshipLabel>
        <relationshipName>Treatment_Change_Requests2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_Notes__c</fullName>
        <label>Reason Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial ability changed</fullName>
                </value>
                <value>
                    <fullName>Dental Necessity Changed</fullName>
                </value>
                <value>
                    <fullName>Other - fill in notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Stage__c</fullName>
        <label>Treatment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prior to Prosth Exam</fullName>
                </value>
                <value>
                    <fullName>At Prosth Exam</fullName>
                </value>
                <value>
                    <fullName>Post Prosth / prior to surgery</fullName>
                </value>
                <value>
                    <fullName>post surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgrade Doctor</label>
        <referenceTo>ClearChoice_Doctor__c</referenceTo>
        <relationshipLabel>Treatment Change Requests</relationshipLabel>
        <relationshipName>Treatment_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Treatment Change Request</label>
    <nameField>
        <displayFormat>TCR-{0000}</displayFormat>
        <label>Treatment Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>